--- a/PROJECT_CK/PROJECT_CK/packages.config
+++ b/PROJECT_CK/PROJECT_CK/packages.config
@@ -4,6 +4,7 @@
   <package id="Microsoft.AspNetCore.Cryptography.Internal" version="9.0.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Cryptography.KeyDerivation" version="9.0.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.0" targetFramework="net48" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1001" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="QRCoder" version="1.6.0" targetFramework="net48" />
   <package id="Siticone.NetFramework.UI" version="2025.2.14" targetFramework="net48" />
