update chức năng thống kê doanh thu

--- a/PROJECT_CK/PROJECT_CK/PROJECT_CK.csproj
+++ b/PROJECT_CK/PROJECT_CK/PROJECT_CK.csproj
@@ -124,6 +124,7 @@
     <Compile Include="DangNhap.Designer.cs">
       <DependentUpon>DangNhap.cs</DependentUpon>
     </Compile>
+    <Compile Include="QuanLyBanXe.cs" />
     <Compile Include="QuanLyKhachHang.cs" />
     <Compile Include="QuanLyNhanVien.cs" />
     <Compile Include="QuanLyNhapXe_Kho.cs" />
